--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -8,8 +8,13 @@
     "start": "next start"
   },
   "dependencies": {
+    "@apollo/client": "^3.2.1",
+    "formik": "^2.1.5",
+    "graphql": "^15.3.0",
     "next": "9.5.3",
+    "node-fetch": "^2.6.1",
     "react": "16.13.1",
-    "react-dom": "16.13.1"
+    "react-dom": "16.13.1",
+    "yup": "^0.29.3"
   }
 }
