--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -17,6 +17,7 @@
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-select": "^3.1.0",
+    "recharts": "^1.8.5",
     "sweetalert2": "^10.3.5",
     "yup": "^0.29.3"
   }
